# edi-framework

./: README.md  requirements.txt  test-requirements.txt
edi_account_oca/i18n/: it.po
edi_account_oca/views/: res_partner.xml
edi_endpoint_oca/: README.rst
edi_endpoint_oca/data/: server_action.xml
edi_endpoint_oca/views/: edi_endpoint_views.xml
edi_exchange_deduplicate_oca/: README.rst  __manifest__.py
edi_exchange_deduplicate_oca/data/: cron.xml
edi_exchange_deduplicate_oca/models/: edi_backend.py  edi_exchange_record.py  edi_exchange_type.py
edi_exchange_deduplicate_oca/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
edi_exchange_deduplicate_oca/views/: edi_exchange_type_views.xml
edi_exchange_template_oca/: README.rst
edi_exchange_template_oca_json/: README.rst  __manifest__.py
edi_exchange_template_oca_json/models/: edi_exchange_template_output.py
edi_exchange_template_oca_json/readme/: DESCRIPTION.md
edi_exchange_template_oca_json/tests/: __init__.py  test_edi_backend_output_json.py
edi_exchange_type_auto/models/: edi_auto_exchange_consumer_mixin.py
edi_exchange_type_auto/tests/: test_consumer_mixin.py
edi_notification_oca/: README.rst
edi_notification_oca/components/: listener.py
edi_oca/: README.rst  __manifest__.py
edi_partner_oca/: README.rst  __manifest__.py
edi_product_oca/: README.rst  __manifest__.py
edi_project_oca/: README.rst
edi_storage_oca/: README.rst  __manifest__.py  utils.py
edi_webservice_oca/: README.rst
edi_xml_oca/: __manifest__.py
setup/_metapackage/: pyproject.toml
(+72 files in other folders)
