[project]
name = "odoo-addons-oca-edi-framework"
version = "18.0.20250120.0"
dependencies = [
    "odoo-addon-edi_account_oca==18.0.*",
    "odoo-addon-edi_exchange_template_oca==18.0.*",
    "odoo-addon-edi_oca==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
